--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     --sub-font: #c3c4c3;
     --danger: #F94A29;
     --bg-sidebar: #01140e;
+    --border-color: rgba(179, 179, 187, 0.5);
 }
 
 body {
@@ -221,7 +222,7 @@ body {
 #notification-popup {
     padding: 0px 20px;
     position: absolute;
-    border: 1px solid grey;
+    border: 1px dashed var(--border-color);
     border-radius: 10px;
     top: 60px;
     width: 400px;
@@ -312,10 +313,10 @@ body {
 /* ---------------------------- Translate */
 #translate > .country {
     position: absolute;
-    width: 170px;
+    width: 160px;
     top: 60px;
-    height: 200px;
-    border: 1px solid green;
+    height: 180px;
+    border: 1px dashed var(--border-color);
     display: flex;
     flex-direction: column;
     border-radius: 10%;
@@ -350,4 +351,98 @@ body {
 
 #translate > .country > div > p {
     margin-left: 5px;
+}
+
+
+
+/* ----------------------------------- Dashboard */
+#dashboard-container {
+    position: absolute;
+    top: 60px;
+    right: 50px;
+    width: 240px;
+    height: 240px;
+    border: 1px dashed var(--border-color);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    visibility: hidden;
+    opacity: 0;
+    background-color: #fff;
+}
+
+#dashboard:hover #dashboard-container {
+    visibility: visible;
+    opacity: 1;
+}
+
+#dashboard-container > .dashboard-items {
+    height: 100px;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    line-height: 20px;
+}
+
+#dashboard-container > .dashboard-items > iconify-icon {
+    height: 30px;
+}
+#dashboard-container > .dashboard-items > p:nth-child(2) {
+    font-size: 15px;
+    text-align: center;
+}
+#dashboard-container > .dashboard-items > p:nth-child(3) {
+    font-size: 10px;
+    text-align: center;
+}
+
+
+
+
+/* -------------------------- Profile */
+#profile-container {
+    position: absolute;
+    padding: 0;
+    top: 60px;
+    right: 10px;
+    /* height: 100px; */
+    border: 1px dashed var(--border-color);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#profile:hover #profile-container {
+    visibility: visible;
+    opacity: 1;
+}
+
+#profile-container .items {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    align-items: start;
+}
+
+#profile-container .profile-items > p{
+    font-size: 15px;
+    margin-left: 15px;
+    font-weight: 400;
+}
+
+#profile-container .sign-out {
+    background-color: #F94A29;
+    width: 100%;
+    display: grid;
+}
+
+#profile-container .sign-out p {
+    color: var(--font-color-light);
+    font-size: 14px;
 }
