--- a/style.css
+++ b/style.css
@@ -570,3 +570,159 @@ body {
     font-weight: 400;
     color: var(--sub-font);
 }
+
+
+
+/* ----------------------- Deatils */
+.details {
+    grid-row: 8/11;
+    margin-top: 1rem;
+    min-width: 100%;
+    min-height: 18rem;
+    margin: 0 1.35rem;
+    display: flex;
+    gap: 1rem;
+}
+
+.details > div {
+    border: 1px dashed var(--border-color);
+    border-radius: 10px;
+    width: 30%;
+    padding: 1rem;
+    box-sizing: border-box;
+}
+
+.wallet {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--sub-font);
+}
+
+.amount {
+    margin-top: 0.75rem;
+}
+.amount p:nth-child(1),
+.earn p:nth-child(1),
+.withdrawl p:nth-child(1) {
+    font-weight: 400;
+    font-size: 0.8rem;
+}
+.amount p:nth-child(1) span {
+    margin-left: 2px;
+    color: blue;
+    cursor: pointer;
+}
+.amount p:nth-child(1) span:hover {
+    text-decoration: underline;
+    color: red;
+}
+
+.amount p:nth-child(2),
+.earn p:nth-child(2),
+.withdrawl p:nth-child(2) {
+    font-weight: 600;
+    opacity: 0.9;
+    font-size: 1.25rem;
+}
+
+
+
+.downloads {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.files-container {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.file-item {
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+    align-self: baseline;
+}
+
+.file-item span,
+.file-item iconify-icon {
+    border-radius: 5px;
+    color: blue;
+    font-size: 25px;
+    margin-right: 10px;
+}
+
+.files-container p {
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    font-size: 0.75rem;
+    text-align: left;
+    margin-top: 5px;
+}
+
+.downloads > div:last-child {
+    margin-top: 1.5rem;
+    font-size: 0.75rem;
+}
+
+
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.trending-pic-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-left: 10px;
+}
+
+.tr-items {
+    width: 100%;
+    height: 50px;
+    gap: 10px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+}
+
+.tr-items:hover {
+    background-color: var(--sub-font);
+    border-radius: 10px;
+    opacity: 0.75;
+    cursor: pointer;
+}
+
+.tr-items div:nth-child(1) {
+    display: grid;
+}
+
+.tr-items img {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+}
+
+.tr-items div:nth-child(2) {
+    font-weight: 400;
+    font-size: 1.2rem;
+    font-family: 'Julee', cursive;
+}
+
+.tr-items > span {
+    margin-left: auto;
+}
